frontend/test/should_fail/defYield_005i.grg
using defYield;

test t
{
	def x:B;
	y:B;
	pp:p(x, y);
}

pattern p(x:B, def z:B)
{
	y:B;
	yield { yield x = y; }
}

